--- a/SkilEx/MainViewControllers/MainView.storyboard
+++ b/SkilEx/MainViewControllers/MainView.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ugi-zV-rbC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ugi-zV-rbC">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -859,7 +860,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="serviceDescripitionTableViewController" modalPresentationStyle="fullScreen" id="8Ju-fR-q4O" customClass="ServiceDescripitionTableViewController" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8hw-j1-6Wx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="462"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="495"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <sections>
@@ -1170,9 +1171,10 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Functional and performance checks" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n4M-WU-rGK">
-                                                            <rect key="frame" x="115" y="31" width="223" height="30"/>
+                                                            <rect key="frame" x="115" y="10" width="223" height="73"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="30" id="g6Z-Yu-2LJ"/>
+                                                                <constraint firstAttribute="width" constant="223" id="0dh-VP-3EW"/>
+                                                                <constraint firstAttribute="height" constant="73" id="g6Z-Yu-2LJ"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
                                                             <nil key="textColor"/>
@@ -1185,7 +1187,7 @@
                                                         <constraint firstItem="lBf-aE-lr8" firstAttribute="top" secondItem="gFQ-WZ-lLZ" secondAttribute="top" constant="10" id="HhH-Zw-7xY"/>
                                                         <constraint firstAttribute="bottom" secondItem="lBf-aE-lr8" secondAttribute="bottom" constant="9" id="bO2-Vv-iQv"/>
                                                         <constraint firstItem="n4M-WU-rGK" firstAttribute="leading" secondItem="lBf-aE-lr8" secondAttribute="trailing" constant="8" id="yZc-6K-ATN"/>
-                                                        <constraint firstItem="n4M-WU-rGK" firstAttribute="top" secondItem="gFQ-WZ-lLZ" secondAttribute="top" constant="31" id="zSg-ve-ySL"/>
+                                                        <constraint firstItem="n4M-WU-rGK" firstAttribute="top" secondItem="gFQ-WZ-lLZ" secondAttribute="top" constant="10" id="zSg-ve-ySL"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -1491,11 +1493,11 @@
         <scene sceneID="0ag-UK-M8Q">
             <objects>
                 <viewController storyboardIdentifier="aboutUs" title="SkilEx" modalPresentationStyle="fullScreen" hidesBottomBarWhenPushed="YES" id="8wP-RL-v3g" customClass="AboutUs" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="weu-Wk-fbq">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="weu-Wk-fbq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkL-R6-ToW">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkL-R6-ToW">
                                 <rect key="frame" x="13" y="47" width="348" height="576"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
